--- a/src/main/res/layout/activity_all_videos.xml
+++ b/src/main/res/layout/activity_all_videos.xml
@@ -16,13 +16,14 @@
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginLeft="@dimen/_15sdp"
         android:layout_marginRight="@dimen/_15sdp"
-        android:hint="Paste your video link here"
+        android:hint="@string/paste_your_video_link_here"
         android:textColorHint="#B3B3B3"
         android:inputType="text"
         android:textColor="#E93F40"
-        android:paddingLeft="@dimen/_15sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:background="@drawable/url_edit_text_shape"
-        android:textSize="@dimen/_12sdp"/>
+        android:textSize="@dimen/_13sdp"
+        tools:ignore="RtlSymmetry" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,38 +34,38 @@
 
         <Button
             android:id="@+id/clearButton"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:text="clear"
-            android:textSize="@dimen/_10sdp"
+            android:layout_width="@dimen/_85sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:text="@string/clear"
+            android:textSize="@dimen/_13sdp"
             android:padding="@dimen/_5sdp"
-            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_30sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:textColor="@color/white"
             android:background="@drawable/rounded_button"
             />
         <Button
             android:id="@+id/pasteButton"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:text="Paste"
-            android:textSize="@dimen/_10sdp"
+            android:layout_width="@dimen/_85sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:text="@string/paste"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/white"
             android:padding="@dimen/_5sdp"
             android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rounded_button"
             />
         <Button
             android:id="@+id/downloadButton"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:text="Download"
+            android:layout_width="@dimen/_85sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:text="@string/download"
             android:padding="@dimen/_5sdp"
-            android:textSize="@dimen/_10sdp"
+            android:textSize="@dimen/_13sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:textColor="@color/white"
-            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rounded_button"
             />
     </LinearLayout>
