--- a/src/main/res/layout/ad_unified.xml
+++ b/src/main/res/layout/ad_unified.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.gms.ads.formats.UnifiedNativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,9 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:textSize="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:text="Ad"/>
+            android:textSize="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:text="@string/ad"
+            tools:ignore="RtlHardcoded" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +41,8 @@
                     android:adjustViewBounds="true"
                     android:paddingBottom="5dp"
                     android:paddingEnd="5dp"
-                    android:paddingRight="5dp"/>
+                    tools:ignore="RtlSymmetry"
+                    android:importantForAccessibility="no" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -88,7 +91,6 @@
                     android:id="@+id/ad_body"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
                     android:layout_marginEnd="20dp"
                     android:textSize="12sp" />
 
@@ -131,8 +133,9 @@
                         android:id="@+id/ad_call_to_action"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:hint="@string/ad_call"
                         android:gravity="center"
-                        android:textSize="12sp" />
+                        android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
