--- a/src/main/res/layout/dialog.xml
+++ b/src/main/res/layout/dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,60 +18,67 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:importantForAccessibility="no" />
         <ImageView
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center"
             android:padding="@dimen/_5sdp"
             android:src="@drawable/play"
-            android:tint="@color/white"/>
+            android:tint="@color/white"
+            android:importantForAccessibility="no" />
     </FrameLayout>
     <TextView
         android:id="@+id/downloadTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/title"
         android:maxLines="2"
         android:textColor="#161616"
-        android:textSize="@dimen/_11sdp"
-        android:paddingLeft="@dimen/_8sdp"/>
+        android:textSize="@dimen/_15sdp"
+        android:paddingStart="@dimen/_8sdp"
+        tools:ignore="RtlSymmetry" />
     <TextView
         android:id="@+id/downloadDuration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Duration"
+        android:text="@string/duration"
         android:textColor="#161616"
-        android:textSize="@dimen/_11sdp"
-        android:paddingLeft="@dimen/_8sdp"/>
+        android:textSize="@dimen/_15sdp"
+        android:paddingStart="@dimen/_8sdp"
+        tools:ignore="RtlSymmetry" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right"
-        android:layout_marginRight="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_10sdp">
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        tools:ignore="RtlHardcoded">
         <TextView
             android:id="@+id/cancel"
             android:clickable="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:layout_height="@dimen/_39sdp"
+            android:text="@string/cancel"
             android:textStyle="bold"
             android:layout_marginRight="@dimen/_5sdp"
-            android:textSize="@dimen/_15sdp"
-            android:textColor="@color/colorAccent"/>
+            android:textSize="@dimen/_20sdp"
+            android:textColor="@color/colorAccent"
+            android:focusable="true" />
         <TextView
             android:id="@+id/download"
             android:clickable="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Download"
+            android:layout_height="@dimen/_39sdp"
+            android:text="@string/download"
             android:textStyle="bold"
-            android:textSize="@dimen/_15sdp"
+            android:textSize="@dimen/_20sdp"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/colorAccent"
+            android:focusable="true" />
     </LinearLayout>
 
 </LinearLayout>
