--- a/src/main/res/layout/download_dialog.xml
+++ b/src/main/res/layout/download_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,51 +19,58 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/ic_launcher"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:importantForAccessibility="no" />
         <ImageView
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center"
             android:padding="@dimen/_5sdp"
             android:src="@drawable/play"
-            android:tint="@color/white"/>
+            android:tint="@color/white"
+            android:importantForAccessibility="no" />
     </FrameLayout>
     <TextView
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="title"
+        android:text="@string/title"
         android:maxLines="2"
         android:layout_marginTop="@dimen/_5sdp"
         android:textColor="#161616"
         android:textSize="@dimen/_13sdp"
-        android:paddingLeft="@dimen/_8sdp"/>
+        android:paddingStart="@dimen/_8sdp"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right"
-        android:layout_marginRight="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_10sdp">
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        tools:ignore="RtlHardcoded">
         <TextView
             android:id="@+id/cancel_download_dialog"
             android:clickable="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:layout_height="@dimen/_39sdp"
+            android:text="@string/cancel"
             android:textStyle="bold"
             android:textSize="@dimen/_15sdp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/colorAccent"
+            android:focusable="true" />
         <TextView
             android:id="@+id/download_dialog"
             android:clickable="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Download"
+            android:layout_height="@dimen/_39sdp"
+            android:text="@string/download"
             android:textSize="@dimen/_15sdp"
             android:textStyle="bold"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:textColor="@color/colorAccent"/>
+            android:layout_marginStart="@dimen/_10sdp"
+            android:textColor="@color/colorAccent"
+            android:focusable="true"
+            tools:ignore="RtlHardcoded" />
     </LinearLayout>
 
 
