--- a/src/main/res/layout/item.xml
+++ b/src/main/res/layout/item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/_2sdp"
         android:layout_weight="1"
         app:cardCornerRadius="@dimen/_5sdp"
@@ -27,7 +28,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/todo" />
                     <ImageView
                         android:id="@+id/playerImageView"
                         android:layout_width="@dimen/_40sdp"
@@ -35,7 +37,8 @@
                         android:layout_gravity="center"
                         android:padding="@dimen/_5sdp"
                         android:src="@drawable/play"
-                        android:tint="@color/white"/>
+                        android:tint="@color/white"
+                        android:importantForAccessibility="no" />
                 </FrameLayout>
             <LinearLayout
                 android:orientation="vertical"
@@ -47,31 +50,34 @@
                 android:id="@+id/text_view1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Title"
+                android:hint="@string/title"
                 android:maxLines="2"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:textSize="@dimen/_13sdp"
-                android:paddingLeft="@dimen/_2sdp"/>
+                android:textSize="@dimen/_15sdp"
+                android:paddingStart="@dimen/_2sdp"
+                tools:ignore="RtlSymmetry" />
             <TextView
                 android:id="@+id/text_view3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Channel"
+                android:hint="@string/channel"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_9sdp"
-                android:paddingLeft="@dimen/_5sdp"/>
+                android:textSize="@dimen/_13sdp"
+                android:paddingStart="@dimen/_5sdp"
+                tools:ignore="RtlSymmetry" />
             <TextView
                 android:id="@+id/text_view4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Owner"
+                android:hint="@string/owner"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_9sdp"
-                android:paddingLeft="@dimen/_5sdp"/>
+                android:textSize="@dimen/_13sdp"
+                android:paddingStart="@dimen/_5sdp"
+                tools:ignore="RtlSymmetry" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
