--- a/src/main/res/layout/splash_screen.xml
+++ b/src/main/res/layout/splash_screen.xml
@@ -13,11 +13,12 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_70sdp"
-        android:src="@mipmap/logo"/>
+        android:src="@mipmap/logo"
+        android:importantForAccessibility="no" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fetching data...."
+        android:text="@string/fetching_data"
         android:gravity="center"
         android:textSize="@dimen/_15sdp"
         android:textColor="@color/white"
@@ -33,18 +34,18 @@
     <Button
         android:id="@+id/startButton"
         android:visibility="invisible"
-        android:layout_width="@dimen/_150sdp"
+        android:layout_width="@dimen/_100sdp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_5sdp"
-        android:text="Start"
+        android:text="@string/start"
         android:textColor="@color/white"
         android:background="@drawable/start_button"/>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
